@@ -1,1 +1,1 @@
-1.3.0rc3
+1.3.0rc4
