@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.45 2008/06/24 20:31:32 tho Exp $
+$Id: ChangeLog,v 1.46 2008/06/25 10:10:15 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+	- [configure] added --no_docs and --do_test configure flags
 	- [array] dynamic array module added (can be disabled via --no_array
 	  configure argument)
 	- [list] u_list_insert and u_list_del_n added
